[package]
name = "day_03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "part1"
path = "src/part1.rs"

[[bin]]
name = "part2"
path = "src/part2.rs"

[dependencies]
ndarray = "0.15.6"
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = "0.3.18"
